issue #275 assemble a plot arc from current missions. rebalance biting, colour hyperlinks to be readable.

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ body
     background-color: black;
 }
 
+a:link {
+    color: #00FFFF;
+}
+
 .textbox
 {
     font-family: 'Courier New', courier, Calibri, Arial, modern, monospace, sans-serif;
